--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
 
 /* TODO Add site wide styles */
 html, body, div, span, applet, object, iframe,
@@ -13,17 +15,23 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-  margin: 0;
+	margin: 0;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	font-family: Poppins;
 }
 
 /* make sure to set some focus styles for accessibility */
 :focus {
     outline: 0;
+}
+
+#root {
+	height: 100vh;
+	width: 100vw;
 }
 
 /* HTML5 display-role reset for older browsers */
